--- a/client/game.html
+++ b/client/game.html
@@ -336,7 +336,7 @@
 		function createTag(tag, className="", innerHTML="") {
 			var el = document.createElement(tag)
 			el.className = className
-			el.innerHTML = innerHTML
+			el.innerText = innerHTML
 			return el
 		}
 
